<resources>
    <string name="app_name">Full Organizer</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_reminder_title">Enter reminder title</string>
    <string name="hint_reminder_location">Enter location</string>
    <string name="hint_reminder_description">Enter reminder description</string>
    <string name="btn_reminder_date">Set Date</string>
    <string name="btn_reminder_time">Set Time</string>
    <string name="cb_reminder_set_alarm">Set alarm for the reminder</string>
    <string name="tv_reminder_alarm_time">Alarm time:</string>
    <string name="et_input_number_default">0</string>
    <string name="hint_list_name">Enter the list title</string>
    <string name="rbRepeat">Repeat</string>
    <string name="rbOnce">Once</string>
    <string name="toolbar_title_alarm">Alarm</string>
    <string name="toolbar_title_add_alarm">Add Alarm</string>
    <string name="toolbar_title_todo">Todo</string>
    <string name="toolbar_title_add_todo">Add Todo List</string>
    <string name="toolbar_title_notes">Notes</string>
    <string name="toolbar_title_add_note">Add Note</string>
    <string name="toolbar_title_reminder">Reminder</string>
    <string name="toolbar_title_add_reminder">Add Reminder</string>
    <string name="toolbar_title_main">Full Organizer</string>
    <string name="db_user">User</string>
    <string name="db_alarm">Alarm</string>
    <string name="db_notes">Notes</string>
    <string name="db_todo_list">Todo List</string>
    <string name="db_todo_items">Todo Items</string>
    <string name="db_reminder">Reminder</string>
    <string name="db_request_code">Alarm Id</string>

    // Spinner for reminders
    <string-array name="reminder_spinner">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>

</resources>
