<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="peegee.fullorganizer.reminder.AddReminder">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/etTitle"
        android:hint="@string/hint_reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:padding="@dimen/tv_padding"/>

    <EditText
        android:id="@+id/etLocation"
        android:hint="@string/hint_reminder_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etTitle"
        android:padding="@dimen/tv_padding"
        android:layout_marginTop="@dimen/reminder_margin_top"/>

    <EditText
        android:id="@+id/etDescription"
        android:hint="@string/hint_reminder_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLocation"
        android:padding="@dimen/tv_padding"
        android:layout_marginTop="@dimen/reminder_margin_top"/>

    <Button
        android:id="@+id/btnSetDate"
        android:text="@string/btn_reminder_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etDescription"
        android:padding="@dimen/small_btn_padding"
        android:layout_marginTop="@dimen/reminder_margin_top"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSetDate"
        android:layout_alignBottom="@+id/btnSetDate"
        android:layout_alignEnd="@+id/tvTime"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="@dimen/tv_padding"
        android:layout_marginTop="@dimen/reminder_margin_top"/>

    <Button
        android:id="@+id/btnSetTime"
        android:text="@string/btn_reminder_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSetDate"
        android:padding="@dimen/small_btn_padding"
        android:layout_marginTop="@dimen/reminder_margin_top"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSetTime"
        android:layout_alignBottom="@+id/btnSetTime"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/btnSetDate"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="@dimen/tv_padding"
        android:layout_marginTop="@dimen/reminder_margin_top"/>

    <CheckBox
        android:id="@+id/cbAlarm"
        android:text="@string/cb_reminder_set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSetTime"
        android:layout_marginTop="@dimen/reminder_margin_top"/>

    <TextView
        android:id="@+id/tvSpinner"
        android:text="@string/tv_reminder_alarm_time"
        android:layout_below="@id/cbAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="@dimen/tv_padding"
        android:layout_marginTop="@dimen/reminder_margin_top"/>

    <EditText
        android:id="@+id/etAlarmTime"
        android:layout_width="@dimen/et_number_input_size"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvSpinner"
        android:layout_toEndOf="@+id/tvSpinner"
        android:foregroundTint="@android:color/black"
        android:inputType="number"
        android:text="@string/et_input_number_default"
        android:padding="@dimen/tv_padding"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Spinner
        android:id="@+id/spAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etAlarmTime"
        android:layout_toEndOf="@+id/etAlarmTime"
        android:padding="@dimen/small_btn_padding">

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnSaveReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnCancelReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
